kotlin-parser/src/test/semlang/validatorTests/fail/integerLiteral5.sem
function myStuff.myFunction(): Integer {
  Integer."abcd"
}
